[SE] Fix the size jumping of active and inactive button

--- a/apps/spreadsheeteditor/embed/resources/less/application.less
+++ b/apps/spreadsheeteditor/embed/resources/less/application.less
@@ -33,12 +33,22 @@
       border-left: 1px solid #cacaca;
       color: rgba(0, 0, 0, 0.8);
       font-size: 11px;
-      font-weight: bold;
+      cursor: pointer;
+      letter-spacing: 0.01em;
+      text-align: center;
 
       &.active {
         box-shadow: inset 0 4px 0 #49795d;
         background-color: #DDDDDD;
         color: #000;
+        font-weight: bold;
+      }
+
+      &::after {
+        content: attr(tabtitle);
+        font-weight: bold;
+        display: block;
+        height: 0;
       }
     }
   }
